small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>HELLOOO COURSERA</title>
 </head>
 <body>
-	<h1>Hellooo Coursera</h1>
+	<h1>Hellooo Coursera. It's a great course!</h1>
 </body>
 </html>
